Changelog
=========


1.4.1 (unreleased)
------------------

- Nothing changed yet.


1.4.0 (2016-05-24)
------------------

- Introduce ie-only mixin.
  [Kevin Bieri]


1.3.0 (2016-05-20)
------------------

- Extend list-group mixin interface to configure the hover color.
  [Kevin Bieri]

- Add new variable $color-content-background.
  [mathias.leimgruber]

- Introduce overlay mixin.
  [Kevin Bieri]

- Extend floatgrid with by-index directive.
  [Kevin Bieri]


1.2.0 (2016-03-30)
------------------

- Introduce horizontal definition list mixin.
  [Kevin Bieri]

- Responsive support for textareas.
  [Kevin Bieri]

- Introduce portrait mixin.
  [Kevin Bieri]

- Responsive support for input fields.
  [Kevin Bieri]

- Introduce active list-group item mixin.
  [Kevin Bieri]


1.1.0 (2016-03-03)
------------------

- Introduce progressbar.
  [Kevin Bieri]

- Register imaging scales as dynamic SCSS resource.
  [Kevin Bieri]

- Add label element mixins.
  [elioschmutz]

- Introduce inverted link colors.
  Apply blueberry color scheme.
  [Kevin Bieri]

- Update font-awesome to 4.5.0. [jone]

- Add `width-full` functional class of grid system for legacy support.
  [Kevin Bieri]

- Introduce floated grid system.
  [Kevin Bieri]

- Use more modular and adaptive mixins to provide a base to build themes upon it.
  Deprecated variables are stil avilable but will be removed in the next major.
  So use the new variables set for further styling.
  [Kevin Bieri]


1.0.3 (2015-11-17)
------------------

- Change collection / topic icons in order to avoid collision.
  [jone]

- Add open office mimetype icons.
  [jone]


1.0.2 (2015-10-28)
------------------

- Provide mimetype icons for solr flairs.
  [jone]


1.0.1 (2015-10-26)
------------------

- Remove duplicate icon in search results for files.
  [jone]


1.0.0 (2015-09-30)
------------------

- Initial implementation
  [jone]