@@ -5,7 +5,8 @@ Changelog
 1.4.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Introduce spinner mixin.
+  [Kevin Bieri]
 
 
 1.4.0 (2016-05-24)
